@@ -26,3 +26,5 @@
   * Mention http://groups.google.com/group/niceeditor in splash screen.
 
   * About now displays splash screen in addition to its status bar message.
+
+  * Added AutoMatchBracket to indicate visible matching {}, (), [], <> pairs.
